// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-typography example 1 1`] = `
<div
  className=""
  style={
    {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <h1
    className=""
    id="example-Title"
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 36,
          "lineHeight": "40px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 900,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Title
  </h1>
  <h2
    className=""
    id="example-HeadingLarge"
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    HeadingLarge
  </h2>
  <h3
    className=""
    id="example-HeadingMedium"
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 22,
          "lineHeight": "26px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    HeadingMedium
  </h3>
  <h4
    className=""
    id="example-HeadingSmall"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    HeadingSmall
  </h4>
  <h4
    className=""
    id="example-HeadingXSmall"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 700,
        "letterSpacing": 0.6,
        "lineHeight": "16px",
        "marginBottom": 0,
        "marginTop": 0,
        "textTransform": "uppercase",
      }
    }
  >
    HeadingXSmall
  </h4>
  <span
    className=""
    id="example-BodySerifBlock"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 22,
        "fontWeight": 400,
        "lineHeight": "28px",
      }
    }
  >
    BodySerifBlock
  </span>
  <span
    className=""
    id="example-BodySerif"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 18,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    BodySerif
  </span>
  <span
    className=""
    id="example-BodyMonospace"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Inconsolata, monospace",
        "fontSize": 17,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    BodyMonospace
  </span>
  <span
    className=""
    id="example-Body"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Body
  </span>
  <span
    className=""
    id="example-LabelLarge"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 700,
        "lineHeight": "20px",
      }
    }
  >
    LabelLarge
  </span>
  <span
    className=""
    id="example-LabelMedium"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    LabelMedium
  </span>
  <span
    className=""
    id="example-LabelSmall"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    LabelSmall
  </span>
  <span
    className=""
    id="example-LabelXSmall"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "16px",
      }
    }
  >
    LabelXSmall
  </span>
  <span
    className=""
    id="example-Tagline"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 400,
        "lineHeight": "24px",
      }
    }
  >
    Tagline
  </span>
  <span
    className=""
    id="example-Caption"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    Caption
  </span>
  <span
    className=""
    id="example-Footnote"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    Footnote
  </span>
</div>
`;

exports[`wonder-blocks-typography example 2 1`] = `
<h1
  className=""
  style={
    {
      "@media (maxWidth: 1023px)": {
        "fontSize": 28,
        "lineHeight": "32px",
      },
      "@media (minWidth: 1024px)": {
        "fontSize": 36,
        "lineHeight": "40px",
      },
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "color": "#1865f2",
      "display": "block",
      "fontFamily": "Lato, "Noto Sans", sans-serif",
      "fontWeight": 900,
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  Blue Title
</h1>
`;

exports[`wonder-blocks-typography example 3 1`] = `
<h1
  aria-label="Accessible Title"
  className=""
  style={
    {
      "@media (maxWidth: 1023px)": {
        "fontSize": 28,
        "lineHeight": "32px",
      },
      "@media (minWidth: 1024px)": {
        "fontSize": 36,
        "lineHeight": "40px",
      },
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "display": "block",
      "fontFamily": "Lato, "Noto Sans", sans-serif",
      "fontWeight": 900,
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  Title
</h1>
`;

exports[`wonder-blocks-typography example 4 1`] = `
<div
  className=""
  style={
    {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <h1
    className=""
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 36,
          "lineHeight": "40px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 900,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </h1>
  <h2
    className=""
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </h2>
  <h3
    className=""
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 22,
          "lineHeight": "26px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </h3>
  <h4
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </h4>
  <h4
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 700,
        "letterSpacing": 0.6,
        "lineHeight": "16px",
        "marginBottom": 0,
        "marginTop": 0,
        "textTransform": "uppercase",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </h4>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 22,
        "fontWeight": 400,
        "lineHeight": "28px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 18,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Inconsolata, monospace",
        "fontSize": 17,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 700,
        "lineHeight": "20px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "16px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 400,
        "lineHeight": "24px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    Для каждого ученика, независимо от возраста. Реальные результаты!
  </span>
</div>
`;

exports[`wonder-blocks-typography example 5 1`] = `
<div
  className=""
  style={
    {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <h1
    className=""
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 36,
          "lineHeight": "40px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 900,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </h1>
  <h2
    className=""
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </h2>
  <h3
    className=""
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 22,
          "lineHeight": "26px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </h3>
  <h4
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </h4>
  <h4
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 700,
        "letterSpacing": 0.6,
        "lineHeight": "16px",
        "marginBottom": 0,
        "marginTop": 0,
        "textTransform": "uppercase",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </h4>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 22,
        "fontWeight": 400,
        "lineHeight": "28px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 18,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Inconsolata, monospace",
        "fontSize": 17,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 700,
        "lineHeight": "20px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "16px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 400,
        "lineHeight": "24px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
  <span
    className=""
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    Dành cho mọi học sinh, mọi lớp học. Kết quả thực tế.
  </span>
</div>
`;

exports[`wonder-blocks-typography example 6 1`] = `
<div
  className=""
  style={
    {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <span
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      className=""
      data-test-id="dropdown-live-region"
      style={
        {
          "border": 0,
          "clip": "rect(0,0,0,0)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "width": 1,
        }
      }
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="language-selector"
      className=""
      disabled={false}
      id="unique-language-selector"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "::MozFocusInner": {
            "border": 0,
          },
          "alignItems": "center",
          "background": "#ffffff",
          "borderColor": "rgba(33,36,44,0.16)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "boxSizing": "border-box",
          "color": "#21242c",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "space-between",
          "margin": 0,
          "outline": "none",
          "paddingLeft": 16,
          "paddingRight": 12,
          "position": "relative",
          "textDecoration": "none",
          "touchAction": "manipulation",
          "whiteSpace": "nowrap",
        }
      }
      type="button"
    >
      <span
        className=""
        style={
          {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, "Noto Sans", sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "20px",
            "marginRight": 8,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        arabic
      </span>
      <svg
        aria-hidden="true"
        className=""
        height={16}
        style={
          {
            "display": "inline-block",
            "flexGrow": 0,
            "flexShrink": 0,
            "minWidth": 16,
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="rgba(33,36,44,0.64)"
        />
      </svg>
    </button>
  </div>
  <h1
    className=""
    dir="rtl"
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 36,
          "lineHeight": "40px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 900,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    مرحبا
  </h1>
  <h2
    className=""
    dir="rtl"
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 28,
          "lineHeight": "32px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    مرحبا
  </h2>
  <h3
    className=""
    dir="rtl"
    style={
      {
        "@media (maxWidth: 1023px)": {
          "fontSize": 22,
          "lineHeight": "26px",
        },
        "@media (minWidth: 1024px)": {
          "fontSize": 24,
          "lineHeight": "28px",
        },
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontWeight": 700,
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    مرحبا
  </h3>
  <h4
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    مرحبا
  </h4>
  <h4
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 700,
        "letterSpacing": 0.6,
        "lineHeight": "16px",
        "marginBottom": 0,
        "marginTop": 0,
        "textTransform": "uppercase",
      }
    }
  >
    مرحبا
  </h4>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 22,
        "fontWeight": 400,
        "lineHeight": "28px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": ""Noto Serif", serif",
        "fontSize": 18,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Inconsolata, monospace",
        "fontSize": 17,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 700,
        "lineHeight": "20px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "16px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 20,
        "fontWeight": 400,
        "lineHeight": "24px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": "20px",
      }
    }
  >
    مرحبا
  </span>
  <span
    className=""
    dir="rtl"
    style={
      {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, "Noto Sans", sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": "18px",
      }
    }
  >
    مرحبا
  </span>
</div>
`;

exports[`wonder-blocks-typography example 7 1`] = `
<span
  className=""
  style={
    {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "display": "block",
      "fontFamily": "Inconsolata, monospace",
      "fontSize": 17,
      "fontWeight": 400,
      "lineHeight": "22px",
      "whiteSpace": "pre",
    }
  }
>
  const things = {
    areTested: "This is my new Code element with my code.",
};
</span>
`;
